Mon May 18 15:31:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_f_notimplement): should not respond to
	  not-implemented methods.  as the address inside a DLL and the
	  imported address are different on Windows, use an exported
	  variable to share the same address.

Mon May 18 13:55:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb (mon_try_enter, mon_enter): should reset @mon_count
	  just in case the previous owner thread dies without mon_exit.
	  [fix GH-874] Patch by @chrisberkhout

Sun May 17 17:21:29 2015  Eric Wong  <e@80x24.org>

	* lib/webrick/utils.rb (set_non_blocking): use IO#nonblock=
	* (set_close_on_exec): use IO#close_on_exec=
	  [Feature #11136]

Sun May 17 15:01:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_positive_p, num_negative_p): add methods
	  Numeric#positive? and Numeric#negative?.
	  [ruby-core:69173] [Feature #11151]

	* numeric.c (flo_positive_p, flo_negative_p): specialized
	  functions for Float.

	* complex.c (Init_Complex): Complex do not have positive? and
	  negative? methods

Sun May 17 14:57:42 2015  Eric Wong  <e@80x24.org>

	* lib/webrick/server.rb (accept_client): avoid redundant fcntl call
	  [Feature #11137]

Sun May 17 12:13:33 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (cloexec_accept): support nonblock flag and
	  use SOCK_NONBLOCK if possible
	* ext/socket/init.c (rsock_s_accept_nonblock):
	  update cloexec_accept call
	* ext/socket/init.c (accept_blocking): ditto for blocking
	* test/socket/test_nonblock.rb: check nonblock? on accepted socket
	  [Feature #11138]

Sun May 17 03:58:59 2015  Aaron Patterson <tenderlove@ruby-lang.org>

	* load.c (loaded_feature_path): stop returning false negatives for
	  filenames which are trailing substrings of file extensions.  For
	  example, 'b', which a trailing substring of ".rb" should not return
	  false. [Bug #11155][ruby-core:69206]

	* test/ruby/test_autoload.rb: test for fix
